--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
     <title>Докопатыч. Подбор фильмов и сериалов</title>
     <meta name="description"
-        content="Телеграм бот для быстрого подбора фильмов и сериалов. Собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
+        content="Телеграм бот для быстрого подбора фильма наподобие вашего любимого фильма. Собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
 
     <meta name="application-name" content="Докопатыч" />
     <meta property="og:title" content="Докопатыч" />
     <meta property="og:site_name" content="Докопатыч" />
 
     <meta property="og:description"
-        content="Телеграм бот для быстрого подбора фильмов и сериалов. Собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
+        content="Телеграм бот для быстрого подбора фильма наподобие вашего любимого фильма. Собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
 
     <meta property="og:image" content="https://dokopatych.github.io/images/square.webp" />
     <meta property="og:url" content="https://dokopatych.github.io/" />
@@ -77,7 +77,7 @@
             <img src="./images/round-sm.webp" alt="Аватар" class="avatar" />
             <span class="name">Докопатыч</span>
             <span class="username">@DokopatychBot</span>
-            <h1 class="description">Бот для быстрого подбора фильмов и сериалов <br /><br />
+            <h1 class="description">Бот для быстрого подбора фильма наподобие вашего любимого фильма <br /><br />
                 In memory of Jeff Baena
             </h1>
             <div class="btns-container">
@@ -94,7 +94,7 @@
                 <div class="swiper-slide">Ищешь, что посмотреть</div>
                 <div class="swiper-slide">Вспоминаешь, какой фильм или сериал стал для тебя родным</div>
                 <div class="swiper-slide">Присылаешь его мне</div>
-                <div class="swiper-slide">Прогоняю через алгоритм и подбираю тебе что-то ещё</div>
+                <div class="swiper-slide">Прогоняю через алгоритм и подбираю тебе что-то ещё наподобие</div>
                 <div class="swiper-slide">Темы разные. Главное, чтобы вайб был "как тогда"</div>
                 <div class="swiper-slide">Выбирай по обложке, выбирай сердечком</div>
             </div>
