--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
 
     <link rel="canonical" href="https://dokopatych.github.io/">
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="https://dokopatych.github.io/images/round-sm.ico" />
-    <link rel="icon" type="image/png" href="images/round-sm.png" />
-    <link rel="shortcut icon" href="images/round-sm.ico" />
+    <!-- Favicon --> 
+    <link rel="icon" href="https://dokopatych.github.io/images/round-sm.ico" type="image/x-icon"> 
+    <link rel="shortcut icon" href="https://dokopatych.github.io/images/round-sm.ico" />
 
     <!-- Стили -->
     <link rel="stylesheet" href="styles.css" />
