--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <link rel="canonical" href="https://dokopatych.github.io/">
 
-    <!-- Favicon p--> 
+    <!-- Favicon --> 
     <link rel="icon" href="https://dokopatych.github.io/images/round-sm.ico" type="image/x-icon"> 
     <link rel="shortcut icon" href="https://dokopatych.github.io/images/round-sm.ico" />
 
