--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
                 In memory of Jeff Baena
             </h1>
             <div class="btns-container">
-                <a href="https://web.telegram.org/k/#@DokopatychBot" class="start-btn" target="_blank">
+                <a href="https://t.me/DokopatychBot?start=landing" class="start-btn" target="_blank">
                     WEB
                 </a>
-                <a href="tg://resolve?domain=DokopatychBot" class="start-btn"> DESKTOP </a>
+                <a href="tg://start?bot=DokopatychBot&start=landing" class="start-btn"> DESKTOP </a>
                 <button class="start-btn" id="qrBtn">QR</button>
             </div>
         </div>
