--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <a href="https://t.me/DokopatychBot?start=landing" class="start-btn" target="_blank">
                     WEB
                 </a>
-                <a href="tg://start?bot=DokopatychBot&start=landing" class="start-btn"> DESKTOP </a>
+                <a href="tg://resolve?domain=DokopatychBot" class="start-btn"> DESKTOP </a>
                 <button class="start-btn" id="qrBtn">QR</button>
             </div>
         </div>
