--- a/start.html
+++ b/start.html
@@ -82,7 +82,7 @@
 
 <body>
 	<script>
-		const BOT_USERNAME = 'DkptchStageBot'; // тестовый
+		const BOT_USERNAME = 'DokopatychBot';
 		const COUNTER_ID = 103218568; // docoRedirect
 	
 		ym(COUNTER_ID, 'getClientID', function(clientId) {
