--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
     <title>Докопатыч. Подбор фильмов и сериалов</title>
     <meta name="description"
-        content="Телеграм бот для быстрого подбора фильма наподобие вашего любимого фильма. Собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
+        content="Телеграм бот для быстрого подбора фильма на основе фильма от вас. Собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
 
-    <meta name="application-name" content="Докопатыч | Фильмы наподобие вашего любимого фильма" />
-    <meta property="og:title" content="Докопатыч | Фильмы наподобие вашего любимого фильма" />
-    <meta property="og:site_name" content="Докопатыч | Фильмы наподобие вашего любимого фильма" />
+    <meta name="application-name" content="Докопатыч | Нормальный подбор кино" />
+    <meta property="og:title" content="Докопатыч | Нормальный подбор кино" />
+    <meta property="og:site_name" content="Докопатыч | Нормальный подбор кино" />
 
     <meta property="og:description"
-        content="Телеграм бот для быстрого подбора фильма наподобие вашего любимого фильма. Собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
+        content="Телеграм бот для быстрого подбора фильма на основе фильма от вас.  Собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
 
     <meta property="og:image" content="https://dokopatych.github.io/images/square.webp" />
     <meta property="og:url" content="https://dokopatych.github.io/" />
@@ -93,7 +93,7 @@
             <img src="./images/round-sm.webp" alt="Аватар" class="avatar" />
             <span class="name">Докопатыч</span>
             <span class="username">@DokopatychBot</span>
-            <h1 class="description">Бот для быстрого подбора фильма наподобие вашего любимого фильма <br /><br />
+            <h1 class="description">Бот для быстрого подбора кино <br /><br />
                 In memory of Jeff Baena
             </h1>
             <div class="btns-container">
