--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
     <title>Докопатыч. Подбор фильмов и сериалов</title>
     <meta name="description"
-        content="Телеграм бот для подбора кино 🐻" />
+        content="Телеграм бот для подбора кино. Присылай фильм, подберу список к нему. Алгоритм свой, домашний, не списки из интернета и не AI. Выбирай по обложке и сердечком 🐻" />
 
     <meta name="application-name" content="Докопатыч | Нормальный подбор кино" />
     <meta property="og:title" content="Докопатыч | Нормальный подбор кино" />
     <meta property="og:site_name" content="Докопатыч | Нормальный подбор кино" />
 
     <meta property="og:description"
-        content="Телеграм бот для подбора кино 🐻" />
+        content="Телеграм бот для подбора кино. Присылай фильм, подберу список к нему. Алгоритм свой, домашний, не списки из интернета и не AI. Выбирай по обложке и сердечком 🐻" />
 
     <meta property="og:image" content="https://dokopatych.github.io/images/square.webp" />
     <meta property="og:url" content="https://dokopatych.github.io/" />
