--- a/start.html
+++ b/start.html
@@ -75,30 +75,35 @@
 
 <body>
 	<script>
-    const handleLink = async function (){
- 		const BOT_USERNAME = 'DokopatychBot';
-		const COUNTER_ID = 103218568; // docoRedirect
-		let tgLink = `https://t.me/${BOT_USERNAME}`;
-    const isYbaip = document.URL.includes("?ybaip=1") ? 1 : 0
-    const isRef = document?.referrer?.includes("?ybaip=1") ? 1 : 0
-    const isFromDirect = isYbaip || isRef
-	
-		await ym(COUNTER_ID, 'getClientID', async function(clientId) {
-      const params = {
-      cId: clientId,
-      p: 2,
-      d: isFromDirect
-    }
+    const handleLink = async function () {
+      const BOT_USERNAME = 'DokopatychBot';
+      const COUNTER_ID = 103218568; // docoRedirect
+      let tgLink = `https://t.me/${BOT_USERNAME}`;
+      const isYbaip = document?.URL?.includes("?ybaip=1") ? 1 : 0
+      const isRef = document?.referrer?.includes("?ybaip=1") ? 1 : 0
+      const isFromDirect = isYbaip || isRef
     
-    const str = await JSON.stringify(params)
-    const compressed = btoa(str)  
-     tgLink = `${tgLink}?start=${compressed}`;
-		});
-    console.log(tgLink)
+      await ym(COUNTER_ID, 'getClientID', async function(clientId) {
+          const params = {
+          cId: clientId,
+          p: 2,
+          d: isFromDirect
+        }
+        
+        const str = await JSON.stringify(params)
+        const compressed = btoa(str)  
+        tgLink = `${tgLink}?start=${compressed}`;
+        ym(103218568,'reachGoal','loadedCounter')
+        return tgLink
+      });
 
-   window.location.href = tgLink; 
+      window.location.href = tgLink; 
   }
+  try {
     handleLink()
+  } catch {
+    ym(103218568,'reachGoal','loadError')
+  }
 	</script>
 </body>
 
