--- a/start.html
+++ b/start.html
@@ -17,14 +17,14 @@
 
     <title>Докопатыч. Подбор фильмов и сериалов</title>
     <meta name="description"
-        content="Телеграм бот для подбора кино. Присылай фильм, подберу список к нему. Алгоритм свой, домашний, не списки из интернета и не AI. Выбирай по обложке и сердечком 🐻" />
+        content="Телеграм бот для подбора кино. Присылай фильм, подберу список к нему. Алгоритм свой, домашний, не списки из интернета и не AI. Выбирай по обложке и сердечком 🐻 Здесь можно скачать кино бесплатно" />
 
     <meta name="application-name" content="Докопатыч | Нормальный подбор кино" />
     <meta property="og:title" content="Докопатыч | Нормальный подбор кино" />
     <meta property="og:site_name" content="Докопатыч | Нормальный подбор кино" />
 
     <meta property="og:description"
-        content="Телеграм бот для подбора кино. Присылай фильм, подберу список к нему. Алгоритм свой, домашний, не списки из интернета и не AI. Выбирай по обложке и сердечком 🐻" />
+        content="Телеграм бот для подбора кино. Присылай фильм, подберу список к нему. Алгоритм свой, домашний, не списки из интернета и не AI. Выбирай по обложке и сердечком 🐻 Здесь можно скачать кино бесплатно" />
 
     <meta property="og:image" content="https://dokopatych.github.io/images/square.webp" />
     <meta property="og:url" content="https://dokopatych.github.io/" />
@@ -153,7 +153,7 @@
             <img src="./images/round-sm.webp" alt="Аватар" class="avatar" />
             <span class="name">Докопатыч</span>
             <span class="username">@DokopatychBot</span>
-            <h1 class="description">Бот для быстрого подбора кино <br /><br />
+            <h1 class="description">Бот для быстрого подбора кино. Поможет выбрать и скачать фильм бесплатно <br /><br />
                 In memory of Jeff Baena
             </h1>
             <div class="btns-container">
